--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,18 @@
-[tool.poetry]
+[project]
 name = "flagship"
-version = "0.0.0"
-description = ""
-authors = ["johnplitharas@gmail.com"]
-license = "MIT"
+version = "0.1.0"
+description = "Add your description here"
 readme = "README.md"
+requires-python = ">=3.12"
+dependencies = []
 
-[tool.poetry.dependencies]
-python = ">=3.12,<3.13"
-
-[tool.poetry.group.dev.dependencies]
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[dependency-groups]
+dev = [
+    "black>=25.1.0",
+    "hypothesis>=6.138.14",
+    "isort>=6.0.1",
+    "mutmut>=3.3.1",
+    "pytest>=8.4.2",
+    "pytest-cov>=6.3.0",
+    "ruff>=0.12.12",
+]
