--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,15 +1,13 @@
-
 name: Test Project Template
 run-name: Pipeline run by @${{ github.actor }}
 
 on:
-    workflow_call:
-    workflow_dispatch:
-    push:
-       branches: [main]
-    pull_request:
-        branches: [main]
-
+  workflow_call:
+  workflow_dispatch:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
   test:
@@ -17,41 +15,33 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: Setup Python  ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+      - name: Setup Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
         with:
-           python-version: 3.11
+          python-version: '3.12'
 
-      - name: Install poetry
-        uses: abatilo/actions-poetry@v2
-        with:
-          poetry-version: 1.6.1
-
-      - name: Set Poetry config
-        run: |
-             poetry config virtualenvs.create false
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
 
       - name: Install dependencies
         run: |
-            poetry install
+          uv sync --dev
 
       - name: Code Quality
         run: |
-            make check
+          uv run make check
 
       - name: Run test cases
         run: |
-            make test
+          uv run make test
 
       - name: Upload coverage reports
         id: upload
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
-            name: coverage-reports
-            path: |
-              coverage.xml
-              htmlcov/
-
-     
+          name: coverage-reports
+          path: |
+            coverage.xml
+            htmlcov/
