--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dev = [
     "mypy>=1.17.1",
     "pytest>=8.4.2",
     "pytest-cov>=6.3.0",
+    "pytest-watch>=4.2.0",
     "ruff>=0.12.12",
 ]
 
