--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.116.1",
+    "pytz>=2025.2",
     "sqlalchemy>=2.0.43",
 ]
 
@@ -20,6 +21,7 @@ dev = [
     "pytest-cov>=6.3.0",
     "pytest-watch>=4.2.0",
     "ruff>=0.12.12",
+    "types-pytz>=2025.2.0.20250809",
 ]
 
 
