--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "fastapi>=0.116.1",
     "pytz>=2025.2",
     "sqlalchemy>=2.0.43",
+    "uvicorn>=0.35.0",
 ]
 
 [dependency-groups]
