--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.116.1",
+    "httpx>=0.28.1",
     "pytz>=2025.2",
     "sqlalchemy>=2.0.43",
     "uvicorn>=0.35.0",
