update service methods to async functions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dev = [
     "mutmut>=3.3.1",
     "mypy>=1.17.1",
     "pytest>=8.4.2",
+    "pytest-asyncio>=1.1.0",
     "pytest-cov>=6.3.0",
     "pytest-watch>=4.2.0",
     "ruff>=0.12.12",
