--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.116.1",
     "httpx>=0.28.1",
+    "jinja2>=3.1.6",
     "loguru>=0.7.3",
     "pydantic-settings>=2.10.1",
     "pymongo>=4.14.1",
