setup mkdocs part1

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ dev = [
     "faker>=37.6.0",
     "hypothesis>=6.138.14",
     "isort>=6.0.1",
+    "mkdocs>=1.6.1",
+    "mkdocs-material>=9.6.20",
     "mutmut>=3.3.1",
     "mypy>=1.17.1",
     "pytest>=8.4.2",
