--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,11 +51,13 @@ lint.select = [
 ]
 
 lint.ignore = [
-  "E501",  # line length (let formatter handle wrapping)
-    "D", # ignore any docstring issues (we'll use pydocstyle separately)
-    "COM812", # line break before binary operator (handled by formatter)
-    "ERA001", # Found commented-out code
-    "PGH003", # Use specific rule codes when ignoring type issues
+  "E501",      # line length (let formatter handle wrapping)
+    "D",       # ignore any docstring issues (we'll use pydocstyle separately)
+    "COM812",  # line break before binary operator (handled by formatter)
+    "ERA001",  # Found commented-out code
+    "PGH003",  # Use specific rule codes when ignoring type issues
+    "TRY300",  # Consider moving this statement to an `else` block
+
 ]
 
 # Maximum line length (matches Black’s default)
